add a js style file on git

--- a/run.html
+++ b/run.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+
+    <h1>ratnesh is addin js file on git hub</h1>
     <script src="run.js"> </script>
 </body>
 </html>
